# python-localimport

./: .gitpublish  .versionupgrade  404.html  CHANGELOG.md  LICENSE  Makefile  README.md  README.rst  index.html  localimport.min.py  localimport.py  pyproject.toml  setup.py  sitemap.xml
.changelog/: 1.7.4.toml  1.7.6.toml  _unreleased.toml
.github/workflows/: python.yml
changelog/: index.html
docs/: build.novella
docs/content/: changelog.md  index.md
search/: search_index.json
src/localimport/: __init__.py
tests/: test_localimport.py
